<resources>
    <string name="app_name">"Winkel"</string>
    <string name="welcome__sign_up">Welcome\nSign Up!</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No:</string>
    <string name="create_account_for">Create account for:</string>
    <string name="customer">Customer</string>
    <string name="vendor">Vendor</string>
    <string name="admin">Admin</string>
    <string name="code">Code</string>
    <string name="license">License:</string>
    <string name="upload_a_photo">Upload a photo</string>
    <string name="upload_a_pdf">upload a pdf</string>
    <string name="pin">Pin</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_agree_with_the_terms_of_services">I agree with the terms of services</string>
    <string name="sign_up">Sign UP</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="hello__sign_in">Hello\nSign In!</string>
    <string name="forget_password">Forget password?</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="kids">Kids</string>
    <string name="if_you_haven_t_found_your_latest_updates_please_refresh_the_page">If you haven\'t found your latest updates\nplease refresh the page</string>
    <string name="your_wishlist_is_empty">Your WishList is empty!</string>
    <string name="oops">Oops!</string>
    <string name="it_looks_like_your_basket_is_empty__start_adding_items_to_your_basket_now">It looks like your basket is empty\nStart adding items to your basket now!</string>
    <string name="checkout">Checkout</string>
    <string name="item">\u00A0 item</string>
    <string name="items">\u00A0 items</string>
    <string name="total">Total:\u00A0</string>
    <string name="le">\u00A0LE</string>
    <string name="_0">0</string>
    <string name="personal_data">Personal Data</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="enter_your_current_pin">Enter your current PIN</string>
    <string name="shipping_address">Shipping address</string>
    <string name="payment_method">Payment method</string>
    <string name="subtotal">Subtotal:</string>
    <string name="standard_delivery">Standard delivery:</string>
    <string name="payment">Payment</string>
    <string name="size">Size</string>
    <string name="add_to_basket">ADD TO BASKET</string>
    <string name="review">\u00A0Review</string>
    <string name="logged_out_successfully">Logged out successfully</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="log_out">Log Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="page_refreshed_message">Page refreshed\nPlease wait 5 seconds before refreshing again</string>
    <string name="basket_empty_message">Your BASKET is empty! Add something to checkout</string>
    <string name="check_from_your_data">Check from your data</string>
    <string name="authentication_successful">Authentication Successful</string>
    <string name="creation_successful_message">Creation Successful!\nYour account has been created</string>
    <string name="creation_failed_message">Creation failed\nPlease double-check your data and try again</string>
    <string name="authentication_failed_message">Authentication failed\nPlease double-check your information and try again</string>
    <string name="username_empty_error">Please enter a username</string>
    <string name="email_empty_error">Please enter an email address</string>
    <string name="pin_empty_error">Please enter the Pin</string>
    <string name="repin_empty_error">Please re-enter the Pin</string>
    <string name="pins_not_match_error">Pins do not match</string>
    <string name="password_empty_error">Please enter a password</string>
    <string name="re_password_empty_error">Please re-enter the password</string>
    <string name="passwords_not_match_error">Passwords do not match</string>
    <string name="invalid_phone_error">Please enter a valid phone number</string>
    <string name="invalid_user_type_error">Invalid user type</string>
    <string name="terms_of_service_error">Please agree to our terms of service</string>
    <string name="pin_length_error">Pin number should contain exactly four digits</string>
    <string name="item_added_to_wishlist_success">Item successfully added to your wishlist</string>
    <string name="unexpected_error_occurred">An unexpected error occurred\nPlease try again later</string>
    <string name="item_removed_from_wishlist_success">Item successfully removed from your wishlist</string>
    <string name="item_added_success">Item successfully added to your basket</string>
    <string name="choose_size_prompt">Please choose your size</string>
    <string name="payment_added_success">Payment method added successfully</string>
    <string name="payment_add_failed">Failed to add payment method\nPlease try again</string>
    <string name="payment_successful">Payment successful</string>
    <string name="wrong_pin_message">Wrong PIN</string>
    <string name="item_uploaded_success">The new item was uploaded successfully</string>
    <string name="view">View</string>
    <string name="grid_view">Grid view</string>
    <string name="linear_horizontal_view">Linear horizontal view</string>
    <string name="linear_vertical_view">Linear vertical view</string>
    <string name="done">Done</string>
    <string name="sort_by">Sort By</string>
    <string name="main">Main</string>
    <string name="price_high_to_low">Price: High to Low</string>
    <string name="price_low_to_high">Price: Low to High</string>
    <string name="name_a_to_z">Name: A to Z</string>
    <string name="name_z_to_a">Name: Z to A</string>
    <string name="more_options">More options</string>
    <string name="filter">Filter</string>
    <string name="view_products">View Products</string>
    <string name="reset">Reset</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="_1000">1000</string>
    <string name="add_new_method">Add new Method</string>
    <string name="visa">Visa</string>
    <string name="mastercard">Mastercard</string>
    <string name="add_new_payment_method">Add new payment method</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="add_method">Add method</string>
    <string name="my_orders">My Orders</string>
    <string name="my_payment_methods">My payment methods</string>
    <string name="all_orders">All Orders</string>
    <string name="title">Title</string>
    <string name="_for">For</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="upload">Upload</string>
    <string name="search">Search....</string>
    <string name="total_price">Total price:</string>
    <string name="customer_id">Customer ID:</string>
    <string name="total_price_of_order">Total price of order:</string>
    <string name="edit_personal_data">Edit Personal Data</string>
    <string name="account_type">Account type</string>
    <string name="gender">Gender</string>
    <string name="your_admin_code">Your admin code</string>
    <string name="your_vendor_code">Your vendor code</string>
    <string name="copy">Copy</string>
    <string name="personalization">Personalization</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="security_policies">Security Policies</string>
    <string name="languages">Languages</string>
    <string name="notifications">Notifications</string>
    <string name="sound">Sound</string>
    <string name="accessibility_advanced"><![CDATA[Accessibility & Advanced]]></string>
    <string name="slogan_v1">Discover Deals\nDelight Daily</string>
    <string name="_50">-50%</string>
    <string name="top_sales">Top Sales</string>
    <string name="main_categories">Main Categories</string>
    <string name="babies">Babies</string>
    <string name="girls">Girls</string>
    <string name="home">Home</string>
    <string name="new_releases">New Releases</string>
    <string name="top_rating">Top Rating</string>
    <string name="trendy">Trendy</string>
    <string name="recommended">Recommended</string>
    <string name="boys">Boys</string>
    <string name="account">Account</string>
    <string name="for_admins">For Admins</string>
    <string name="all_users">All Users</string>
    <string name="for_vendors">For Vendors</string>
    <string name="add_new_item">Add New Item</string>
    <string name="my_items">My Items</string>
    <string name="delete_account">Delete Account</string>
    <string name="account_data">Account Data</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="permissions">Permissions</string>
    <string name="about">About</string>
    <string name="support_us">Support Us</string>
    <string name="thank_you_for_choosing_winkel__happy_shopping">Thank you for choosing Winkel.\nHappy shopping!</string>
    <string name="about_winkel">About Winkel</string>
    <string name="welcome_to_winkel_your_ultimate_destination_for_convenient_and_secure_online_shopping_at_winkel_we_re_dedicated_to_providing_you_with_a_seamless_shopping_experience_offering_a_wide_range_of_products_from_trusted_vendors_here_s_what_you_need_to_know_about_us">Welcome to Winkel, your ultimate destination for convenient and secure online shopping. At Winkel, we\'re dedicated to providing you with a seamless shopping experience, offering a wide range of products from trusted vendors. Here\'s what you need to know about us:</string>
    <string name="our_mission">Our Mission</string>
    <string name="winkel_is_on_a_mission_to_revolutionize_the_way_you_shop_online_we_aim_to_create_a_platform_that_connects_customers_with_high_quality_products_and_reliable_vendors_ensuring_satisfaction_with_every_purchase">Winkel is on a mission to revolutionize the way you shop online. We aim to create a platform that connects customers with high-quality products and reliable vendors, ensuring satisfaction with every purchase.</string>
    <string name="our_vision">Our Vision</string>
    <string name="we_envision_a_future_where_shopping_is_not_just_a_transaction_but_an_experience_through_innovative_technology_and_customer_centric_features_winkel_strives_to_become_your_go_to_destination_for_all_your_shopping_needs">We envision a future where shopping is not just a transaction but an experience. Through innovative technology and customer-centric features, Winkel strives to become your go-to destination for all your shopping needs.</string>
    <string name="our_commitment">Our Commitment</string>
    <string name="back">Back</string>
    <string name="item_added_to_basket_successfully">Item Added to basket successfully</string>
    <string name="wishlist">WishList</string>
    <string name="loading">loading</string>
    <string name="it_looks_like_you_havent_added_any_items_yet__start_listing_your_products_now">
    It looks like you have not added any items yet\nStart listing your products now!
</string>
    <string name="go_to_payment">Go to Payment</string>
</resources>