<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myItems.MyItemsFragment">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            style="@style/back_arrow_background_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:focusable="true"
            android:padding="9dp" />

        <TextView
            style="@style/TextColor_v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/my_items"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout" />

    <LinearLayout
        android:id="@+id/msgEmptyWishlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            style="@style/icon_tint"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_money" />

        <TextView
            style="@style/TextColor_v1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/oops"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            style="@style/TextColor_v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/it_looks_like_you_havent_added_any_items_yet__start_listing_your_products_now"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.loadingindicator.LoadingIndicator
        android:id="@+id/loadingIndicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/loading"
        app:indicatorColor="?attr/indicatorColor"
        app:indicatorSize="100dp"
        app:minHideDelay="300"
        app:showDelay="200" />

</androidx.constraintlayout.widget.ConstraintLayout>