<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.signin.SigninActivity"
    style="@style/background">

    <TextView
        android:id="@+id/tv_hello_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hello__sign_in"
        android:textSize="50sp"
        android:fontFamily="@font/font_v1"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        style="@style/TextColor_v1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_email_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:fontFamily="@font/font_v1"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        style="@style/TextColor_v2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hello_sign_in"/>

    <EditText
        android:id="@+id/email_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/font_v1"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="20dp"
        android:paddingStart="10dp"
        android:layout_marginEnd="20dp"
        style="@style/TextColor_v1"
        android:autofillHints=""
        android:background="@drawable/rounded_5_white_v2_none_gray_v4"
        android:minHeight="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email_label"/>

    <TextView
        android:id="@+id/tv_password_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:fontFamily="@font/font_v1"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        style="@style/TextColor_v2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_signin"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/pass_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:fontFamily="@font/font_v1"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/TextColor_v1"
        android:autofillHints=""
        android:paddingStart="10dp"
        android:background="@drawable/rounded_5_white_v2_none_gray_v4"
        android:minHeight="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password_label"/>

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="18sp"
        android:fontFamily="@font/font_v1"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginEnd="20dp"
        style="@style/TextColor_v2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_signin" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        style="@style/checkout_background_btn"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_password"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_signup_prompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signin">

        <TextView
            android:id="@+id/tv_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="18sp"
            android:fontFamily="@font/font_v1"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            style="@style/TextColor_v2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/btn_signup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:fontFamily="@font/font_v1"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toEndOf="@id/tv_dont_have_account"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
